--- a/demo-vue3-html/public/004-对象拾取.html
+++ b/demo-vue3-html/public/004-对象拾取.html
@@ -7,7 +7,7 @@
     <script src="./Cesium/Cesium.js"></script>
     <link rel="stylesheet" href="./Cesium/Widgets/widgets.css" />
     <script src="./lib/larkexplorer.umd.js"></script>
-    <script src="https://cdn.bootcdn.net/ajax/libs/dat-gui/0.7.9/dat.gui.min.js"></script>
+    <script src="./dat.gui.min.js"></script>
     <style>
       html,
       body {
