--- a/demo-vue3-html/public/999-GUI配置.html
+++ b/demo-vue3-html/public/999-GUI配置.html
@@ -7,7 +7,7 @@
     />
   </head>
   <body>
-    <script src="https://cdn.bootcdn.net/ajax/libs/dat-gui/0.7.9/dat.gui.min.js"></script>
+    <script src="./dat.gui.min.js"></script>
     <script type="text/javascript">
       var obj = {
         message: "Hello World",
