打包支持压缩加密

--- a/demo-vue3-html/public/001-操作模式.html
+++ b/demo-vue3-html/public/001-操作模式.html
@@ -6,7 +6,7 @@
     <title>000-操作模式</title>
     <script src="./Cesium/Cesium.js"></script>
     <link rel="stylesheet" href="./Cesium/Widgets/widgets.css" />
-    <script src="./lib/larkexplorer.umd.js"></script>
+    <script src="./lib/larkexplorer.umd.min.js"></script>
     <style>
       html,
       body {
