--- a/demo-vue3-html/public/004-对象拾取.html
+++ b/demo-vue3-html/public/004-对象拾取.html
@@ -6,7 +6,7 @@
     <title>008-对象拾取</title>
     <script src="./Cesium/Cesium.js"></script>
     <link rel="stylesheet" href="./Cesium/Widgets/widgets.css" />
-    <script src="./lib/larkexplorer.umd.js"></script>
+    <script src="./lib/larkexplorer.umd.min.js"></script>
     <script src="./dat.gui.min.js"></script>
     <style>
       html,
