--- a/demo-vue3-html/public/005-初始化地形.html
+++ b/demo-vue3-html/public/005-初始化地形.html
@@ -6,7 +6,7 @@
     <title>005-初始化地形</title>
     <script src="./Cesium/Cesium.js"></script>
     <link rel="stylesheet" href="./Cesium/Widgets/widgets.css" />
-    <script src="./lib/larkexplorer.umd.js"></script>
+    <script src="./lib/larkexplorer.umd.min.js"></script>
     <style>
       html,
       body {
